# CineVerse

./: README.md  config.ini  debug.js  index.js  run-all.bat  run-all.sh  run-server.bat  start-system.bat  system-check.py
backend/: CMakeLists.txt  README.md  app.py  cinema_engine.cpp  requirements.txt  setup.py
backend/data/: bookings.json  cinemas.json  movies.json  showtimes.json  users.json
bridge/: .env  Dockerfile  README.md  app.py  check_connection.py  requirements.txt  start_bridge.bat
data/: bookings.js
project/: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
project/src/: App.tsx  index.css  setupProxy.js
project/src/api/: apiClient.ts  config.ts
project/src/components/admin/: Chart.tsx
project/src/components/auth/: AuthModal.tsx  LoginForm.tsx  RegisterForm.tsx
project/src/components/booking/: BookingSummary.tsx  MovieShowtimes.tsx  PaymentForm.tsx  SeatGrid.tsx  TicketTemplate.tsx
project/src/components/common/: AppErrorBoundary.tsx  BackendStatusBanner.tsx  CinemaDetails.tsx  ConfettiExplosion.tsx  ErrorHandler.tsx  (+1 more)
project/src/context/: AppContext.tsx
project/src/data/: bookings.ts  mockData.ts
project/src/hooks/: useAuth.ts  useBookings.ts  useCinemas.ts  useMovies.ts
project/src/layouts/: Layout.tsx
project/src/pages/: BookingConfirmation.tsx  CinemaDetails.tsx  Home.tsx  Login.tsx  MovieDetails.tsx  MyBookings.tsx  NotFound.tsx  PaymentConfirmation.tsx  SeatSelection.tsx
project/src/services/: authService.ts  backendService.ts  bookingService.ts  cinemaService.ts  movieService.ts  pdfService.ts
project/src/types/: booking.ts  cinema.ts  movie.ts
project/src/utils/: analyticsUtils.ts  authUtils.ts  dateUtils.ts  logger.ts  showtimeGenerator.ts
(+16 files in other folders)
